updated referring name for images

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
   <!-- Introduction -->
   <div class="intro">
-  <img src="images/niels.jpg" alt="Niels van Klooster" class="profile">
+  <img src="images/Niels.jpg" alt="Niels van Klooster" class="profile">
     <h1>Niels van Klooster</h1>
       <h2>Student Programmer</h2>
       <h2>@ Le Wagon Chengdu</h2>
@@ -47,7 +47,7 @@
 
   <!-- Kampot -->
   <div class="cities">
-  <img src="images/kampot_sunset2.jpg" alt="Kampot, Cambodia" class="place">
+  <img src="images/Kampot_sunset2.jpg" alt="Kampot, Cambodia" class="place">
   <h3>Kampot, Cambodia</h3>
   <p>Chilled little village located near the coast in the Kingdom of Wonders. Perfect to get away from all the hustle and enjoy Khmer country side.</p>
   </div>
