updated picture links and font color h1

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div class="intro">
   <img src="images/Niels.jpg" alt="Niels van Klooster" class="profile">
     <h1>Niels van Klooster</h1>
-      <h2>Student Programmer</h2>
+      <h2>Student programmer</h2>
       <h2>@ Le Wagon Chengdu</h2>
         <p>Exploring Chinese culture and looking for pandas while trying to build some IT stuff.</p>
   </div>
