--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- <meta property="og:title" content="Le Wagon - The French innovative coding school">
   <meta property="og:image" content="facebook-card.jpg">
   <meta property="og:description" content="Le Wagon is the best French coding school for entrepreneurs. Checkout by yourself the projects of our students. You will be impressed.">
-  <meta property="og:site_name" content="Le Wagon"/> -->
+  <meta property="og:site_name" content="Lea Wagon"/> -->
 
   <!-- resource links -->
   <link rel="stylesheet" href="style.css"
