--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
   <!-- Introduction -->
   <div class="intro">
-  <img src="images/Niels.jpg" alt="Niels van Klooster" class="profile">
+  <img src="images/Niels.JPG" alt="Niels van Klooster" class="profile">
     <h1>Niels van Klooster</h1>
       <h2>Student programmer</h2>
       <h2>@ Le Wagon Chengdu</h2>
