cleaned up the link box

--- a/index.html
+++ b/index.html
@@ -58,17 +58,17 @@
 <ul>
   <li>
     <a href="https://www.facebook.com/vanklooster">
-      <i class="fab fa-facebook-f"></i> Facebook
+      <i class="fab fa-facebook-f"></i>
     </a>
   </li>
   <li>
     <a href="https://www.linkedin.com/in/niels-van-klooster-2831a617/">
-      <i class="fab fa-linkedin-in"></i> Linkedin
+      <i class="fab fa-linkedin-in"></i>
     </a>
   </li>
   <li>
     <a href="https://www.instagram.com/nhcvk/">
-      <i class="fab fa-instagram"></i> Instagram
+      <i class="fab fa-instagram"></i>
     </a>
   </li>
 </ul>
