updated the @media containers to make it mobile responsive

--- a/index.html
+++ b/index.html
@@ -19,12 +19,13 @@
 </head>
 
 <body>
+  <div class="container">
   <!-- Introduction -->
   <div class="intro">
   <img src="images/Niels.JPG" alt="Niels van Klooster" class="profile">
     <h1>Niels van Klooster</h1>
       <h2>Student programmer</h2>
-      <h2>@ Le Wagon Chengdu</h2>
+      <a href="https://www.lewagon.com/chengdu"><h2>@ Le Wagon Chengdu</h2></a>
         <p>Exploring Chinese culture and looking for pandas while trying to build some IT stuff.</p>
   </div>
 
@@ -73,8 +74,7 @@
   </li>
 </ul>
 </div>
-
+</div>
 
 </body>
-
 </html>
