added facebook meta tag

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta name="description" content="Niels is currently trying to sharpen his coding skillset by attending a programming boothcamp in Chengdu organised by Le Wagon.">
 
   <!-- facebook meta text -->
-  <!-- <meta property="og:title" content="Le Wagon - The French innovative coding school">
-  <meta property="og:image" content="facebook-card.jpg">
-  <meta property="og:description" content="Le Wagon is the best French coding school for entrepreneurs. Checkout by yourself the projects of our students. You will be impressed.">
-  <meta property="og:site_name" content="Lea Wagon"/> -->
+  <meta property="og:title" content="Niels van Klooster - Student programmer">
+  <meta property="og:image" content="images/Niels.JPG">
+  <meta property="og:description" content="Exploring Chinese culture and looking for pandas while trying to build some IT stuff.">
+  <meta property="og:site_name" content="Niels van Klooster"/>
 
   <!-- resource links -->
   <link rel="stylesheet" href="style.css"
