--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <!-- google result text -->
   <title> Niels van Klooster - profile page</title>
   <!-- Google result description -->
-  <meta name="description" content="Niels is currently trying to sharpen his coding skillset by attending a programming boothcamp in Chengdu organised by Le Wagon.">
+  <meta name="description" content="Niels van Klooster is currently trying to sharpen his coding skillset by attending a programming boothcamp in Chengdu organised by Le Wagon.">
 
   <!-- facebook meta text -->
   <meta property="og:title" content="Niels van Klooster - Student programmer">
