--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="description" content="Niels van Klooster is currently trying to sharpen his coding skillset by attending a programming boothcamp in Chengdu organised by Le Wagon.">
 
   <!-- facebook meta text -->
-  <meta property="og:title" content="Niels van Klooster - Student programmer">
-  <meta property="og:image" content="images/Niels.JPG">
+  <meta property="og:title" content="Niels van Klooster - Student programmer" alt="Niels van Klooster">
+  <meta property="og:image" content="images/Niels-van-klooster.JPG">
   <meta property="og:description" content="Exploring Chinese culture and looking for pandas while trying to build some IT stuff.">
   <meta property="og:site_name" content="Niels van Klooster"/>
 
@@ -22,7 +22,7 @@
   <div class="container">
   <!-- Introduction -->
   <div class="intro">
-  <img src="images/Niels.JPG" alt="Niels van Klooster" class="profile">
+  <img src="images/Niels-van-klooster.JPG" alt="Niels van Klooster" class="profile">
     <h1>Niels van Klooster</h1>
       <h2>Student programmer</h2>
       <a href="https://www.lewagon.com/chengdu"><h2>@ Le Wagon Chengdu</h2></a>
