--- a/index.html
+++ b/index.html
@@ -72,6 +72,41 @@
       <i class="fab fa-instagram"></i>
     </a>
   </li>
+  <li>
+    <a href="https://github.com/nhcvk">
+      <i class="fab fa-github"></i>
+    </a>
+  </li>
+  <li>
+    <a href="https://www.flickr.com/photos/nielsvanklooster/">
+      <i class="fab fa-flickr"></i>
+    </a>
+  </li>
+  <li>
+    <a href="https://www.reddit.com/user/nielsvanklooster">
+      <i class="fab fa-reddit"></i>
+    </a>
+  </li>
+  <li>
+    <a href="https://www.youtube.com/user/nielsvanklooster">
+      <i class="fab fa-youtube"></i>
+    </a>
+  </li>
+  <li>
+    <a href="https://vimeo.com/nielsvanklooster">
+      <i class="fab fa-vimeo-v"></i>
+    </a>
+  </li>
+  <li>
+    <a href="https://www.pinterest.com/nielsvanklooster/">
+      <i class="fab fa-pinterest"></i>
+    </a>
+  </li>
+  <li>
+    <a href="https://niels-van-klooster.tumblr.com/">
+      <i class="fab fa-tumblr"></i>
+    </a>
+  </li>
 </ul>
 </div>
 </div>
