added section for press mentions

--- a/index.html
+++ b/index.html
@@ -54,6 +54,30 @@
   </div>
 </div>
 
+<div class="places">
+  <h2>Mentions</h2>
+
+    <!-- Phnom Penh Post -->
+    <div class="cities">
+      <img src="images/Sri-Lanka.jpg" alt="Marissa, Sri Lanka" class="place">
+      <h3>Phnom Penh Post</h3>
+      <p>Education in the news</p>
+    </div>
+
+    <!-- Cambodia Daily -->
+    <div class="cities">
+      <img src="images/Sri-Lanka.jpg" alt="Marissa, Sri Lanka" class="place">
+      <h3>Cambodia Daily</h3>
+      <p>Low skilled workers left behind as job markets go online</p>
+    </div>
+
+    <!-- Cambodia Daily -->
+    <div class="cities">
+      <img src="images/Sri-Lanka.jpg" alt="Marissa, Sri Lanka" class="place">
+      <h3>Cambodia Daily</h3>
+      <p>Low skilled workers left behind as job markets go online</p>
+    </div>
+
 <!-- Link to social media pages -->
 <div class="links">
 <ul>
