added 3 profile pictures and youtube plugin for zher presentation

--- a/index.html
+++ b/index.html
@@ -23,10 +23,21 @@
   <!-- Introduction -->
   <div class="intro">
   <img src="images/Niels-van-klooster.JPG" alt="Niels van Klooster" class="profile">
-    <h1>Niels van Klooster</h1>
-      <h2>Student programmer</h2>
-      <a href="https://www.lewagon.com/chengdu"><h2>@ Le Wagon Chengdu</h2></a>
-        <p>Exploring Chinese culture and looking for pandas while trying to build some IT stuff.</p>
+  <h1>Niels van Klooster</h1>
+  <h2>Student programmer</h2>
+  <a href="https://www.lewagon.com/chengdu"><h2>@ Le Wagon Chengdu</h2></a>
+  <p>Exploring Chinese culture and looking for pandas while trying to build some IT stuff.</p>
+  <div class="row">
+      <div class="column">
+        <img src="images/niels-van-klooster-marathon.jpg" alt="Niels van Klooster marathon Siem Reap" style="width:100%">
+      </div>
+      <div class="column">
+        <img src="images/niels-van-klooster-wedding.jpg" alt="Niels van Klooster wedding Laurens and Caroline" style="width:100%">
+      </div>
+      <div class="column">
+        <img src="images/Niels-van-Klooster-presentation.jpg" alt="Niels van Klooster Chengdu presentation Zher" style="width:100%">
+      </div>
+    </div>
   </div>
 
 <div class="places">
@@ -103,10 +114,16 @@
     </div>
 
     <!-- Ministry of Tourism -->
-    <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Ftourismprofessionaltraining%2Fposts%2F148132252413299&width=500" width="500" height="745" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
-
+      <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Ftourismprofessionaltraining%2Fposts%2F148132252413299&width=500" width="500" height="745" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+    
+    
     <!-- Biz Khmer -->
-    <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fvanklooster%2Fposts%2F10154833460464520&width=500" width="500" height="462" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+      <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fvanklooster%2Fposts%2F10154833460464520&width=500" width="500" height="462" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
+
+    <!-- Product presentation -->
+    <div class="sources">
+      <iframe width="400" height="225" src="https://www.youtube.com/embed/NIfW_CvzZ4w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
 
   </div>
 
