--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
   <div class="container">
   <!-- Introduction -->
   <div class="intro">
-  <img src="images/Niels-van-klooster.JPG" alt="Niels van Klooster" class="profile">
+  <img src="images/niels-van-klooster-wedding.jpg" alt="Niels van Klooster" class="profile">
   <h1>Niels van Klooster</h1>
   <h2>Student programmer</h2>
   <a href="https://www.lewagon.com/chengdu"><h2>@ Le Wagon Chengdu</h2></a>
   <p>Exploring Chinese culture and looking for pandas while trying to build some IT stuff.</p>
-  <div class="row">
+  <!-- <div class="row">
       <div class="column">
         <img src="images/niels-van-klooster-marathon.jpg" alt="Niels van Klooster marathon Siem Reap" style="width:100%">
       </div>
@@ -37,7 +37,7 @@
       <div class="column">
         <img src="images/Niels-van-Klooster-presentation.jpg" alt="Niels van Klooster Chengdu presentation Zher" style="width:100%">
       </div>
-    </div>
+    </div> -->
   </div>
 
 <div class="places">
