--- a/index.html
+++ b/index.html
@@ -113,17 +113,17 @@
       </a>
     </div>
 
-    <!-- Ministry of Tourism -->
+    <!-- Ministry of Tourism
       <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Ftourismprofessionaltraining%2Fposts%2F148132252413299&width=500" width="500" height="745" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
     
     
-    <!-- Biz Khmer -->
+    Biz Khmer 
       <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fvanklooster%2Fposts%2F10154833460464520&width=500" width="500" height="462" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
 
-    <!-- Product presentation -->
+    Product presentation
     <div class="sources">
       <iframe width="400" height="225" src="https://www.youtube.com/embed/NIfW_CvzZ4w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    </div>
+    </div> -->
 
   </div>
 
