changed profile pic back to original one because it was going down on first page google results (first line images)

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="container">
   <!-- Introduction -->
   <div class="intro">
-  <img src="images/niels-van-klooster-wedding.jpg" alt="Niels van Klooster" class="profile">
+  <img src="images/Niels-van-klooster.JPG" alt="Niels van Klooster" class="profile">
   <h1>Niels van Klooster</h1>
   <h2>Student programmer</h2>
   <a href="https://www.lewagon.com/chengdu"><h2>@ Le Wagon Chengdu</h2></a>
